<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTitleAndDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/cold_pink"
        app:cardCornerRadius="0dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="8dp">


            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/back"
                app:srcCompat="@drawable/ic_back" />

            <EditText
                android:id="@+id/editTextTitle"
                style="@style/style_edit_field"
                android:hint="@string/edit_title"
                android:inputType="text|textCapSentences"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/onBackground"
                android:textColorHighlight="@color/light_cappuccino"
                android:textColorHint="@color/light_cappuccino" />

            <EditText
                android:id="@+id/editTextDescription"
                style="@style/style_edit_field"
                android:layout_marginBottom="32dp"
                android:hint="@string/edit_description"
                android:inputType="text|textCapSentences"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/onBackground"
                android:textColorHighlight="@color/light_cappuccino"
                android:textColorHint="@color/light_cappuccino" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardViewTitleAndDescription"
        app:layout_constraintStart_toStartOf="@+id/cardViewTitleAndDescription"
        app:layout_constraintTop_toBottomOf="@+id/cardViewTitleAndDescription">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearPriority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingTop="16dp">

                    <ImageView
                        android:id="@+id/imageViewPriority"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        app:srcCompat="@drawable/ic_priority" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textPriority"
                            style="@style/style_in_grid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="150dp"
                            android:paddingHorizontal="8dp"
                            android:text="@string/text_priority"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/onBackground"
                            android:textSize="24sp" />

                        <Spinner
                            android:id="@+id/spinnerPriority"
                            style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/Priority"
                            android:minHeight="48dp"
                            android:spinnerMode="dropdown"
                            android:textAlignment="viewStart" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingTop="16dp"
                    android:paddingEnd="32dp">

                    <ImageView
                        android:id="@+id/imageViewType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        app:srcCompat="@drawable/ic_type" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textType"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="8dp"
                            android:text="@string/text_type"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/onBackground"
                            android:textSize="24sp" />

                        <RadioGroup
                            android:id="@+id/radioGroupType"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/radioButtonHealth"
                                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/radio_health" />

                            <RadioButton
                                android:id="@+id/radioButtonKnowledge"
                                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/radio_knowledge" />

                            <RadioButton
                                android:id="@+id/radioButtonHobby"
                                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/radio_hobby" />
                        </RadioGroup>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="6dp"
                    app:srcCompat="@drawable/ic_number" />

                <EditText
                    android:id="@+id/editNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/light_cappuccino"
                    android:hint="@string/edit_number"
                    android:inputType="number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/onBackground"
                    android:textColorHighlight="@color/light_cappuccino"
                    android:textColorHint="@color/light_cappuccino"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearPeriod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewPeriod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="6dp"
                    app:srcCompat="@drawable/ic_week" />

                <EditText
                    android:id="@+id/editTextPeriod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:hint="@string/edit_period"
                    android:inputType="text|textCapSentences"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/onBackground"
                    android:textColorHint="@color/light_cappuccino"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="8dp">

                <ImageView
                    android:id="@+id/imageViewColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    app:srcCompat="@drawable/ic_color" />

                <Button
                    android:id="@+id/buttonColor"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/colorPicker"
                    android:textColor="@color/onBackground"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="16dp"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>